crates/caffeine-ls/tests/snapshots/lsp_snapshots__incremental_sync.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: "(diag_broken, diag_fixed)"
---
[
  {
    "items": [
      {
        "range": {
          "start": {
            "line": 2,
            "character": 18
          },
          "end": {
            "line": 2,
            "character": 19
          }
        },
        "severity": 1,
        "source": "caffeine-ls",
        "message": "WIP"
      },
      {
        "range": {
          "start": {
            "line": 2,
            "character": 18
          },
          "end": {
            "line": 2,
            "character": 19
          }
        },
        "severity": 1,
        "source": "caffeine-ls",
        "message": "WIP"
      }
    ],
    "kind": "full"
  },
  {
    "items": [],
    "kind": "full"
  }
]
