crates/caffeine-ls/tests/snapshots/lsp_snapshots__java_semantic_tokens.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: rows
---
[
  "0:0:7 keyword package",
  "2:0:6 keyword import",
  "4:0:21 comment /** A doc comment. */",
  "5:0:6 modifier public",
  "5:7:5 keyword class",
  "5:19:1 operator <",
  "5:22:7 keyword extends",
  "5:36:1 operator >",
  "5:38:10 keyword implements",
  "6:4:7 modifier private",
  "6:12:6 modifier static",
  "6:19:5 modifier final",
  "6:37:1 operator =",
  "6:39:8 string \"sample\"",
  "7:4:7 modifier private",
  "7:12:3 keyword int",
  "7:22:1 operator =",
  "7:24:1 number 0",
  "9:4:4 keyword enum",
  "11:16:3 keyword int",
  "11:26:3 keyword int",
  "14:4:6 modifier public",
  "14:11:1 operator <",
  "14:13:1 operator >",
  "14:26:1 operator <",
  "14:28:1 operator >",
  "14:38:3 keyword int",
  "15:8:3 keyword int",
  "15:18:1 operator =",
  "15:26:1 operator +",
  "15:28:1 number 1",
  "16:8:3 keyword for",
  "16:21:1 operator :",
  "17:12:2 keyword if",
  "17:22:2 operator ==",
  "17:25:4 keyword null",
  "18:16:8 keyword continue",
  "20:18:2 operator +=",
  "20:21:1 number 1",
  "22:8:6 keyword return",
  "25:4:4 keyword void",
  "26:14:1 operator =",
  "26:16:3 keyword new",
  "26:26:1 operator <",
  "26:34:1 operator >",
  "27:16:1 operator =",
  "27:18:1 number 3",
  "29:8:8 comment /* block",
  "30:0:21 comment            comment */",
  "31:19:1 operator =",
  "31:24:2 operator ->",
  "31:29:3 keyword int",
  "31:39:1 operator =",
  "31:41:1 number 1",
  "35:0:9 keyword interface",
  "36:4:4 keyword void"
]
