crates/caffeine-ls/tests/snapshots/lsp_snapshots__kotlin_definition_implicit_member.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: response
---
[
  {
    "uri": "file://<WORKSPACE_ROOT>/src/com/example/use/Use.kt",
    "range": {
      "start": {
        "line": 5,
        "character": 8
      },
      "end": {
        "line": 5,
        "character": 13
      }
    }
  }
]
