crates/caffeine-ls/tests/snapshots/lsp_snapshots__kotlin_definition_import_path.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: response
---
[
  {
    "uri": "file://<WORKSPACE_ROOT>/src/com/example/Point.kt",
    "range": {
      "start": {
        "line": 7,
        "character": 6
      },
      "end": {
        "line": 7,
        "character": 11
      }
    }
  }
]
