crates/caffeine-ls/tests/snapshots/lsp_snapshots__kotlin_definition_imported_function.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: response
---
[
  {
    "uri": "file://<WORKSPACE_ROOT>/src/com/example/Decls.kt",
    "range": {
      "start": {
        "line": 2,
        "character": 4
      },
      "end": {
        "line": 2,
        "character": 10
      }
    }
  }
]
