crates/caffeine-ls/tests/snapshots/lsp_snapshots__kotlin_definition_init.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: response
---
[
  {
    "uri": "file://<WORKSPACE_ROOT>/src/com/example/Keywords.kt",
    "range": {
      "start": {
        "line": 11,
        "character": 4
      },
      "end": {
        "line": 11,
        "character": 8
      }
    }
  }
]
