crates/caffeine-ls/tests/snapshots/lsp_snapshots__kotlin_definition_local.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: response
---
[
  {
    "uri": "file://<WORKSPACE_ROOT>/src/com/example/use/Use.kt",
    "range": {
      "start": {
        "line": 8,
        "character": 12
      },
      "end": {
        "line": 8,
        "character": 17
      }
    }
  }
]
