crates/caffeine-ls/tests/snapshots/lsp_snapshots__kotlin_definition_nested_class.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: response
---
[
  {
    "uri": "file://<WORKSPACE_ROOT>/src/com/example/Point.kt",
    "range": {
      "start": {
        "line": 11,
        "character": 10
      },
      "end": {
        "line": 11,
        "character": 16
      }
    }
  }
]
